Bug 806001: Make nsListControlFrame pass a nsDidReflowStatus instead of a nsReflowStatus in its DidReflow calls. r=dbaron